--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "bot.js",
   "dependencies": {
-    "discord.js": "^8.0.0",
+    "discord.js": "github:hydrabolt/discord.js#indev-old",
     "fluent-ffmpeg": "^2.1.0",
     "request": "^2.72.0",
     "wolfram-alpha": "^0.5.0",
