--- a/package.json
+++ b/package.json
@@ -4,11 +4,14 @@
   "description": "",
   "main": "bot.js",
   "dependencies": {
-    "discord.js": "github:hydrabolt/discord.js#indev-old",
-    "fluent-ffmpeg": "^2.1.0",
+    "discord.js": "^11.1.0",
+    "fluent-ffmpeg": "^2.1.2",
+    "mongodb": "^2.2.26",
+    "node-opus": "^0.2.6",
+    "opusscript": "0.0.3",
     "request": "^2.72.0",
     "wolfram-alpha": "^0.5.0",
-    "ytdl-core": "^0.7.17"
+    "ytdl-core": "^0.7.24"
   },
   "author": "Brainicism",
   "license": "ISC"
